Bug 791261 - Remove the requirement that a TabParent must be Active in order to send vibrations.  Also remove TabParent::Active(). r=cjones